--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,11 +77,20 @@ jobs:
           pip install awsebcli --upgrade
           eb --version
           
-          
+      # Credentials    
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
+  
+      # Create the Elastic Beanstalk application
+      - name: Create EBS application
+        run: |
+          eb init -p python-3.6 hello-world --region us-east-1# Create the Elastic Beanstalk environment
+      - name: Create test environment
+        run: |
+          eb create test-environment
+          
         
