--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,7 +93,6 @@ jobs:
       # Create the Elastic Beanstalk environment
       - name: Create test environment
         run: |
-          (eb use test-environment && eb status test-environment && eb deploy) 
-          || eb create test-environment
+          (eb use test-environment && eb status test-environment && eb deploy) || eb create test-environment
           
         
